--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
+  "scope": ".",
+  "start_url": ".",
   "icons": [
     {
       "src": "assets/images/icons/icon-72x72.png",
